resolves #11, #19, #20, #12